# ygo-solitaire

./: .mcp.json  .prettierrc  404.html  CLAUDE.md  README.md  compose.yaml  index.html  workspace.code-workspace
.claude/: settings.json
.claude/agents/: fetch-card-info.md
.claude/commands/: implement-card.md  speckit.constitution.md
.claude/rules/: svelte-guide.md  typescript-guide.md
.github/: pull_request_template.md
.specify/memory/: constitution.md
.specify/templates/: testing-guidelines.md
app/: version.json
docs/: 01-requirement.md  02-architecture.md  README.md
docs/adr/: 0001-adopt-clean-architecture.md  0002-use-immer-for-immutability.md  0003-abolish-effect-system.md  0004-data-model-layer-separation.md  0005-card-effect-strategy-pattern.md  0006-four-layer-clean-architecture.md  0007-domain-layer-refactoring.md  0008-effect-model-and-clean-architecture.md  README.md
docs/architecture/: README.md  card-definition-dsl-design.md  card-model-design.md  data-model-design.md  effect-model-design.md  migration-strategy.md  overview.md  testing-strategy.md  typescript-comment-guide.md
docs/development/: README.md  conventions.md  setup.md
docs/domain/: README.md  (+13 more)
fast-api-server/: Dockerfile  mypy.ini  pyproject.toml  ruff.toml
fast-api-server/src/: logging.ini  main.py  settings.py
fast-api-server/src/routes/: heartbeat.py
skeleton-app/: .gitignore  .prettierrc  README.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
specs/: README.md
(+1410 files in other folders)
